Fixing conflict problem between svg images, nav and overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,7 @@ button {
     flex-direction: column;
     background-color: #242424;
     color: #ebebeb;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 header {
@@ -56,11 +56,12 @@ header {
     top: 0;
     z-index: 2;
     background-color: transparent;
-    transition: background-color 0.3s linear;
+    transition: all 0.3s linear;
 }
 
 .header-active {
-    background-color: #000;
+    background-color: #1a1a1a;
+    box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.5);
 }
 
 nav {
@@ -229,18 +230,23 @@ nav {
 
 .first-abstract-shape {
     position: absolute;
-    top: -165px;
-    right: -75px;
+    /* border-top: 1px solid red;
+    border-right: 1px solid red; */
+    top: -109px;
+    right: 0px;
     z-index: -1;
-    transform: scale(0.8);
+    transform: scale(0.6);
+    transform-origin: right top;
 }
 
 .second-abstract-shape {
     position: absolute;
+    /* border-left: 1px solid red; */
     bottom: 0px;
-    left: -100px;
+    left:  0px;
     z-index: -1;
-    transform: scale(2);
+    transform: scale(2.2);
+    transform-origin: left bottom;
 }
 
 .a {
@@ -269,7 +275,12 @@ nav {
 
     nav {
         padding: 30px 40px;
-        transition: padding 0.3s ease-out;
+        transition: all 0.3s linear;
+    }
+    
+    .nav-active {
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 
     .header-logo {
@@ -396,13 +407,13 @@ nav {
     }
 
     .first-abstract-shape {
-        transform: scale(1.6);
+        top: -188px;
+        transform: scale(1.4);
     }
     
     .second-abstract-shape {
-        bottom: -200px;
-        left: -120px;
-        transform: scale(4.5);
+        bottom: -100px;
+        transform: scale(3);
     }
 
 }
@@ -459,13 +470,13 @@ nav {
     }
 
     .first-abstract-shape {
-        transform: scale(2.6);
+        top: -123px;
+        transform: scale(1.8);
     }
     
     .second-abstract-shape {
-        bottom: -100px;
-        left: -80px;
-        transform: scale(5);
+        bottom: -80px;
+        transform: scale(3);
     }
 
 }
@@ -516,7 +527,13 @@ nav {
     }
 
     .first-abstract-shape {
-        transform: scale(3.5);
+        top: -168px;
+        transform: scale(2.4);
+    }
+
+    .second-abstract-shape {
+        bottom: -120px;
+        transform: scale(4.1);
     }
 
 }
